# mtrack

./: .dockerignore  .gitignore  .licensure.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  Makefile  README.md  build.rs  codecov.yaml  devbox.json  package-lock.json  setup.sh  tarpaulin.toml
.github/workflows/: mtrack.yaml  notify-site.yaml  publish.yaml  systemd-test.yaml  test-release-binaries.yaml
assets/: 1Channel44.1k.aac  1Channel44.1k.flac  1Channel44.1k_alac.m4a  playlist.yaml  seek-marker-44.1k.flac  sine440.aac  sine440.flac
assets/songs/: song1.yaml  song10.yaml  song2.yaml  song3.yaml  song4.yaml  song5.yaml  song6.yaml  song7.yaml  song8.yaml  song9.yaml  songs.yaml
benches/: mixer.rs  transcoding.rs
design/: lighting_effects_design.md
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/configuration/: file-formats.md  hardware-profiles.md  player-config.md  samples.md  song-config.md  triggers.md
docs/src/deployment/: security.md  systemd.md
docs/src/dmx/: midi-dmx.md
docs/src/getting-started/: devices.md  file-formats.md  hardware-config.md  importing-songs.md  installation.md  player-config.md  playlists.md  quick-start.md  song-repository.md
docs/src/interfaces/: grpc.md  mcp.md  osc.md  tui.md  web-ui.md
docs/src/legacy/: midi-dmx.md
docs/src/lighting/: configuration.md  cueing.md  effects.md  overview.md  verification.md
docs/src/reference/: known-limitations.md  midi-events.md
examples/: audio_stress.rs  lighting_simulator.rs  mtrack.yaml  playlist.yaml
examples/lighting/fixture_types/: astera_pixelbrick.light  moving_head.light  rgbw_par.light  strobe.light
examples/lighting/shows/: README.md  comprehensive_show.light  crossfade_show.light  dimmer_curves_demo.light  layer_control_demo.light  layering_show.light  measure_timing_demo.light  sequence_example.light
examples/lighting/venues/: main_stage.light  small_club.light
examples/profiles/: 01-raspberry-pi-a.yaml  02-raspberry-pi-b.yaml  03-lighting-node.yaml  04-drum-trigger.yaml  99-fallback.yaml
examples/songs/a-really-cool-song/: song.yaml
examples/songs/a-really-fast-one/: backing-track.aac  song.yaml
examples/songs/another-cool-song/: song.yaml
examples/songs/dsl-light-show-song/: song.yaml
examples/songs/dsl-light-show-song/lighting/: main_show.light  outro.light
examples/songs/outro-tape/: backing-track.m4a  song.yaml
examples/songs/sound-check/: backing-track.flac  song.yaml
examples/songs/the-slow-one/: song.yaml
src/: audio.rs  build_info.rs  calibrate.rs  cli.rs  clock.rs  config.rs  controller.rs  dmx.rs  lib.rs  lighting.rs  main.rs  midi.rs  notification.rs  player.rs  playlist.rs  playsync.rs  proto.rs  samples.rs  section_loop.rs  simulator.rs  song_cache.rs  songs.rs  state.rs  tempo.rs  test.rs  testutil.rs  thread_priority.rs  trigger.rs  tui.rs  util.rs  verify.rs  webui.rs
src/audio/: alsa.rs  click_analysis.rs  confirmation.rs  context.rs  cpal.rs  crossfade.rs  format.rs  metronome.rs  midi_tempo.rs  mixer.rs  mock.rs  monoclip.rs  pilot.rs  sample_source.rs  simd.rs  tempo_guess.rs  thread_priority.rs  track_gains.rs
src/audio/cpal/: device.rs  manager.rs  profiler.rs  stream.rs
src/audio/sample_source/: audio.rs  buffered.rs  channel_mapped.rs  error.rs  factory.rs  looping.rs  memory.rs  tests.rs  traits.rs  transcoder.rs  wav.rs
src/calibrate/: analysis.rs  output.rs  stream.rs
src/cli/: local.rs  migrate.rs  remote.rs
src/config/: audio.rs  controller.rs  dmx.rs  error.rs  hostname.rs  kind.rs  lighting.rs  metronome.rs  midi.rs  notification.rs  pilot.rs  player.rs  playlist.rs  profile.rs  samples.rs  song.rs  statusevents.rs  store.rs  tempo.rs  track.rs  trackmappings.rs  trigger.rs
src/controller/: drivers.rs  grpc.rs  keyboard.rs  mcp.rs  midi.rs  multi.rs  osc.rs
src/controller/mcp/: dsl_reference.md  integration_test.rs  mod.rs  service.rs
src/dmx/: device.rs  dmxengine.rs  engine.rs  legacy_store.rs  midi_dmx_store.rs  ola_client.rs  universe.rs  watcher.rs
src/dmx/engine/: midi_playback.rs  playback.rs  timeline.rs
src/lighting/: consistency_tests.rs  effects.rs  engine.rs  grammar.pest  layering_tests.rs  parser.rs  system.rs  tempo.rs  timeline.rs  types.rs  validation.rs  visual_consistency_tests.rs
src/lighting/effects/: color.rs  error.rs  fixture.rs  instance.rs  state.rs  tempo_aware.rs  tests.rs  types.rs
src/lighting/engine/: layers.rs  processing.rs  tests.rs  validation.rs
src/lighting/engine/tests/: basic_tests.rs  channel_locking_tests.rs  chase_tests.rs  color_cycle_tests.rs  common.rs  coverage_expansion_tests.rs  dimmer_tests.rs  direct_value_tests.rs  effect_management_tests.rs  (+11 more)
src/lighting/layering_tests/: blend_mode_tests.rs  chase_tests.rs  common.rs  conflict_resolution_tests.rs  crossfade_tests.rs  dimmer_tests.rs  dsl_parsing_tests.rs  integration_tests.rs  mod.rs  static_effect_tests.rs  strobe_tests.rs
src/lighting/parser/: effect_parse.rs  error.rs  fixture_venue.rs  grammar.rs  show.rs  tempo_parse.rs  tests.rs  types.rs  utils.rs
src/midi/: beat_clock.rs  midir.rs  mock.rs  morningstar.rs  playback.rs  quanta_ticker.rs  transform.rs
src/notification/: audio.rs  engine.rs  events.rs
src/player/: hardware.rs  navigation.rs  playback.rs  seek.rs
src/samples/: engine.rs  loader.rs  trigger.rs  voice.rs
src/simulator/: server.rs  state.rs  watcher.rs
src/simulator/web/: index.html
src/testutil/: audio.rs  examples.rs  polling.rs
src/trigger/: detector.rs  engine.rs  filter.rs
src/tui/: app.rs  logging.rs  ui.rs
src/webui/: api.rs  config_io.rs  safe_path.rs  server.rs  state.rs
src/webui/api/: browse.rs  config_api.rs  devices.rs  helpers.rs  lighting_api.rs  playlists.rs  profiles.rs  songs_api.rs  status.rs
src/webui/svelte/: .prettierignore  buf.gen.yaml  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  playwright.screenshots.config.ts  playwright.screenshots.live.config.ts  svelte.config.js  tsconfig.json  vite.config.ts
tests/systemd/: Dockerfile  test.sh
touchosc/: mtrack.tosc
(+176 files in other folders)
