[package]
name = "mtrack"
description = "A multitrack audio and MIDI player for live performances."
license = "GPL-3.0"
version = "0.9.2"
authors = ["Michael Wilson <mike@mdwn.dev>"]
edition = "2021"
repository = "https://github.com/mdwn/mtrack"
readme = "README.md"
keywords = ["audio"]
categories = ["multimedia", "multimedia::audio"]
exclude = [
    ".github/*",
    ".gitignore",
    ".licensure.yml",
    "CODE_OF_CONDUCT.md",
    "assets/*",
    "examples/*",
]

[dependencies]
clap = { version = "4.5.23", features = ["cargo", "derive"] }
config = "0.15.6"
cpal = "0.17.1"
rayon = "1.8.0"
num_cpus = "1.16.0"
duration-string = "0.5.2"
symphonia = { version = "0.5", features = ["all"] }
midir = "0.10.1"
midly = "0.5.3"
ola = "0.1.0"
prost = "0.14"
prost-types = "0.14"
rosc = "0.10.1"
rubato = "0.15.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12"
shh = "1.0.1"
spin_sleep = "1.2.1"
thiserror = "2.0.11"
tokio = { version = "1.42.0", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
] }
tonic = "0.14"
tonic-prost = "0.14"
tonic-reflection = "0.14"
tonic-web = "0.14"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
crossbeam-channel = "0.5.15"
thread-priority = "3.0"
parking_lot = "0.12"
hostname = "0.4"
pest = "2.7"
pest_derive = "2.7"
serde_json = "1.0"
ratatui = "0.29"
crossterm = "0.28"

axum = { version = "0.8", features = ["ws"] }
http = "1"
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
rust-embed = "8"
notify = "6"
notify-debouncer-mini = "0.4"
futures-util = "0.3"
tempfile = "3.14.0"

[dev-dependencies]
hound = "3.5.1"
reqwest = { version = "0.12", features = ["json"] }
serial_test = "3.2.0"
tokio-tungstenite = "0.26"

[build-dependencies]
tonic-build = "0.14"
tonic-prost-build = "0.14"

[lib]
name = "mtrack"
path = "src/lib.rs"

[package.metadata.cargo-shear]
ignored = ["prost"]
